Fix race condition when attaching client to text input

Extensions are registered by initialize(), which is called as
a polish event later. Therefore the following race can happen:

1. Application #1 requests a text-input object. The compositor
sees that the seat has no such object and creates a new one.
2. Polish event is posted.
3. Application #2 requests a text-input object. Since the
polish event is not yet processed, it also creates a new one.
4. Second polish event posted.
5. Both polish events processed.

We end up with two competing text-input objects, one per client.
This in turn leads to enter/leave events not being sent correctly,
and the client may therefore end up not updating the keyboard
hints.

The result was arbitrary behavior: Sometimes the keyboard
would not open at all, whereas other times it would open with
the current input method hints, even if these do not match the
hints of the editor.

[ChangeLog][Input] Fixed a problem where a virtual keyboard
would not be updated correctly if two clients were started
at almost the same time.

Fixes: QTBUG-91096
Change-Id: I262a5c15f87ba13d750425c259583919cd947ea4
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit e08b25efe4a7bec1004696bd23d9f8959158bd60)
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>