src/compositor/extensions/qwaylandqttextinputmethodmanager.cpp
@@ -50,6 +50,8 @@ void QWaylandQtTextInputMethodManagerPrivate::text_input_method_manager_v1_get_t
     if (textInput == nullptr)
         textInput = new QWaylandQtTextInputMethod(seat, compositor);
     textInput->add(resource->client(), id, wl_resource_get_version(resource->handle));
+    if (!textInput->isInitialized())
+        textInput->initialize();
 }
 
 /*!
